--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,5 +31,16 @@
                 font-weight: 100;
             }
             .up-button{
-            	color: #fff;
-            }
+			    color: #fff !important;
+			    margin-top: 5px;
+			    margin-left: 5px;
+			    border: 1px solid rgba(241, 90, 36, 0.66);
+			    padding-top: 5px !important;
+			    padding-bottom: 5px !important;
+			    border-radius: 4px;
+			    background: rgba(241, 90, 36, 0.78);
+			}
+			.up-button:hover{
+				background-color: #f15a24 !important;
+				/* end */
+			}
